bug: fix-broken css and links on employer and employee login pages

--- a/public/styles/custom-css/employee-signUp-signIn.css
+++ b/public/styles/custom-css/employee-signUp-signIn.css
@@ -102,6 +102,10 @@ hr {
   text-decoration: none;
 }
 
+.social-signin{
+  text-decoration: none !important;
+}
+
 .github-btn {
   background: #000000d2;
   color: white;
