--- a/public/styles/custom-css/employer-sign-in.css
+++ b/public/styles/custom-css/employer-sign-in.css
@@ -100,6 +100,10 @@ hr {
   text-decoration: none;
 }
 
+.social-signin{
+  text-decoration: none !important;
+}
+
 .facebook-btn {
   color: #ffffff;
   /* width: 264px;
